# Victoria-BugsLife-Simulation-CPP

./: .gitignore  Board.cpp  Board.h  Bug.cpp  Bug.h  CMakeLists.txt  Crawler.cpp  Crawler.h  DiagonalBug.cpp  DiagonalBug.h  Hopper.cpp  Hopper.h  README.md  README.md .final.2  bugs.txt  main.cpp
